--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: "backstage-docs"
 site_description: "test"
 
 nav:
-  - Home: index.html
+  - CCOD-SDK: 'ccod-sdk/index.html'
 
 plugins:
   - techdocs-core
